--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-sass": "^7.0.0",
+    "sass-loader": "^12.4.0"
+  }
 }
